# TelegramFinancesV2

./: .gitignore  main.py  pyproject.toml
.envs/: database.env.demo  misc.env.demo  tokens.env.demo
TFinances/: middlewares.py
TFinances/applications/: __init__.py
TFinances/applications/category/: __init__.py  crud.py  models.py  schemas.py  states.py
TFinances/applications/expenses/: __init__.py  crud.py  models.py  schemas.py
TFinances/applications/user/: __init__.py  crud.py  models.py  schemas.py  user_crud.py
TFinances/core/: __init__.py  bases.py  keyboards.py  middlewares.py  settings.py  utilities.py
TFinances/handlers/: __init__.py  category.py  expense.py  others.py  user.py
TFinances/handlers/category/: __init__.py  add.py  delete.py  update.py
