[tool.poetry]
name = "telegramfinances"
version = "0.1.0"
description = ""
authors = ["Kirill Ibragimov <hexchap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
aiogram = "^2.22.2"
pydantic = "^1.10.2"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
